tests/chainsaw/disallow-host-process/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-hostprocess
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      windowsOptions:
        hostProcess: true
